<resources>
    <!-- TODO: App name -->
    <string name="app_name">To Do</string>

    <!-- TODO: Drawer Menu -->
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Options Menu -->
    <string name="title_action_search">Search</string>
    <string name="title_action_filter">Sort by</string>
    <string name="title_action_check">Done</string>
    <string name="title_action_delete">Delete</string>
    <string name="title_action_add">Add</string>

    <!-- TODO: Content descriptions -->
    <string name="cd_ic_checklist">Logo icon</string>
    <string name="cd_add">Add icon</string>
    <string name="cd_ic_tag">Tag icon</string>
    <string name="cd_ic_calendar">Calendar icon</string>
    <string name="cd_ic_clock">Clock icon</string>
    <string name="cd_btn_date_picker">Button date picker</string>
    <string name="cd_btn_time_picker">Button time picker</string>
    <string name="cd_bg_toolbar">Toolbar background</string>
    <string name="cd_fab_edit">Float button edit</string>
    <string name="cd_ic_empty_list">Image empty list</string>

    <!-- TODO: Fragments labels -->
    <string name="label_home">To do</string>
    <string name="label_settings">@string/title_settings</string>
    <string name="label_add_item">Create new task</string>
    <string name="label_edit_item">Edit task</string>

    <!-- TODO: ItemFragment -->
    <string name="txt_btn_retry">Retry</string>
    <string name="list_title">1 items</string>
    <string name="txt_sorted_by_name">(by Name)</string>
    <string name="txt_sorted_by_due_date">(by Date)</string>

    <!-- TODO: ItemFormFragment -->
    <string name="label_item_name">Name</string>
    <string name="txt_hint_item_name">Describe your task</string>
    <string name="label_due_date">Due date</string>
    <string name="label_due_time">Due time</string>
    <string name="txt_hint_due_date">mm-dd-yyyy</string>
    <string name="txt_hint_due_time">HH:mm</string>

    <!-- TODO: ItemDetailsFragment -->
    <string name="txt_btn_delete">Delete Item</string>

    <!-- TODO: SettingsFragment -->
    <string name="label_theme_settings">Theme</string>
    <string name="txt_theme_settings">Select the theme you would like to view.</string>
    <string name="txt_radio_system">System</string>
    <string name="radio_light">Light</string>
    <string name="radio_dark">Dark</string>

    <!-- TODO: Messages -->
    <string name="msg_fields_required">All fields are required.</string>
    <string name="msg_fail_add">Oops! Try again.</string>
    <string name="msg_success_add">Item successfully created.</string>
    <string name="msg_success_update">Item successfully updated.</string>
    <string name="msg_success_delete">Item successfully deleted.</string>
    <string name="msg_success_check_as_done">Item successfully done.</string>
    <string name="msg_required_name">Name is required</string>
    <string name="msg_required_due_date">Due date is required</string>
    <string name="msg_required_due_time">Due time is required</string>

    <!-- TODO: Notification channel -->
    <string name="channel_name">Notification channel name</string>
    <string name="channel_description">Notification channel description</string>

    <!-- TODO: Widget -->
    <string name="label_new_task">New task</string>

    <!-- TODO: Empty layout -->
    <string name="txt_title_empty_list">Your to do list is empty</string>
    <string name="txt_description_empty_list">You can start by creating a new task by pressing the floating button below.</string>

    <!-- TODO: Sort by array -->
    <string-array name="sort_by_array">
        <item>Name</item>
        <item>Due date</item>
    </string-array>

    <!-- TODO: Dialogs -->
    <string name="btn_dialog_ok">OK</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="btn_dialog_yes">Yes</string>
    <string name="btn_dialog_no">No</string>
    <string name="title_dialog_sort_by">Choose a filter</string>
    <string name="title_dialog_item_done">Mark as done?</string>
    <string name="txt_dialog_item_done">Are you sure you want to mark as done the item</string>
    <string name="title_dialog_item_delete">Delete item?</string>
    <string name="txt_dialog_item_delete">Are you sure you want to delete the item </string>

    <!-- TODO: Preferences Keys -->
    <string name="pref_name">user_preferences</string>
    <string name="pref_key_filter">key-filter</string>
    <string name="pref_key_theme_mode">key-theme-mode</string>
    <string name="save">Save</string>

</resources>