<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ItemDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginStart="15dp"
            app:layout_scrollFlags="noScroll|exitUntilCollapsed|snap"
            app:title="Task details">

            <ImageView
                android:id="@+id/bg_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_bg_toolbar"
                android:scaleType="centerCrop"
                android:src="@drawable/img_header_details"
                app:layout_collapseMode="parallax" />

            <View
                android:id="@+id/bg_shadow"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_title" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <!-- ### CONTENT ### -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginEnd="16dp"
                android:background="@color/light_grey"
                app:layout_constraintBottom_toTopOf="@+id/calendar_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tag_layout"
                app:layout_constraintTop_toBottomOf="@+id/tag_layout" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginEnd="16dp"
                android:background="@color/light_grey"
                app:layout_constraintBottom_toTopOf="@+id/clock_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tag_layout"
                app:layout_constraintTop_toBottomOf="@+id/calendar_layout" />

            <ImageView
                android:id="@+id/iv_tag"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/cd_ic_tag"
                android:src="@drawable/ic_tag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/tag_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/iv_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_tag"
                app:layout_constraintTop_toTopOf="@+id/iv_tag">

                <TextView
                    android:id="@+id/tv_title_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_item_name"
                    android:textColor="@color/color_title"
                    android:textSize="12sp" />

                <com.brunofelixdev.mytodoapp.ui.custom.TextViewCustom
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Buy a new Keyboard" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_calendar"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/cd_ic_calendar"
                android:src="@drawable/ic_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_tag"
                app:tint="@color/purple_500" />

            <LinearLayout
                android:id="@+id/calendar_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/iv_calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_calendar"
                app:layout_constraintTop_toTopOf="@+id/iv_calendar">

                <TextView
                    android:id="@+id/tv_title_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_due_date"
                    android:textColor="@color/color_title"
                    android:textSize="12sp" />

                <com.brunofelixdev.mytodoapp.ui.custom.TextViewCustom
                    android:id="@+id/tv_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Mon, Mar 22, 2021" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_delete"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/txt_btn_delete"
                app:icon="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/delete_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ic_clock"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/cd_ic_clock"
                android:src="@drawable/ic_clock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_calendar" />

            <LinearLayout
                android:id="@+id/clock_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/ic_clock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_clock"
                app:layout_constraintTop_toTopOf="@+id/ic_clock">

                <TextView
                    android:id="@+id/tv_title_due_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_due_time"
                    android:textColor="@color/color_title"
                    android:textSize="12sp" />

                <com.brunofelixdev.mytodoapp.ui.custom.TextViewCustom
                    android:id="@+id/tv_due_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="17:30" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/cd_fab_edit"
        android:src="@drawable/ic_edit"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:maxImageSize="28dp"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>